syntax = "proto3";

package trenical.ticket;

option java_multiple_files = true;
option java_package = "com.trenical.grpc.ticket";
option java_outer_classname = "TicketServiceProto";

// Servizio per la gestione dei ticket ferroviari
service TicketService {
  // Restituisce una lista di anteprime di biglietti compatibili con i criteri di ricerca
  rpc GetTicketPreviews (PreviewRequest) returns (PreviewResponse);
}

// Richiesta per ottenere le anteprime dei biglietti
message PreviewRequest {
  string departure_station = 1;         // Nome o codice stazione di partenza
  string arrival_station = 2;           // Nome o codice stazione di arrivo
  optional string date = 3;             // Data del viaggio (formato ISO "YYYY-MM-DD")
  optional string time=4;               // Orario del viaggio (formato HH:MM)
  optional int32 passenger_number= 5;   // Numero di passeggeri
  optional bool allow_connection = 6;   // Permettere viaggi con cambi
  optional bool return_ticket=7;        // Permette di selzionare viaggio andata e ritorno
}

// Risposta contenente la lista di anteprime
message PreviewResponse {
  repeated TicketPreview previews = 1;
}

// Dettaglio dellâ€™anteprima di un biglietto
message TicketPreview {
  string train_id = 1;
  string departure_time = 2;            // Formato ISO: "YYYY-MM-DDTHH:MM"
  string arrival_time = 3;              // Formato ISO: "YYYY-MM-DDTHH:MM"
  string travel_class = 4;
  double estimated_price = 5;
  bool seat_reservation_required = 6;
  int32 available_seats = 7;
}